recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:3: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Int
  if (l==Nil){return Nil}
                     ^Last:5: error: type mismatch;
 found   : Int
 required: List[Int]
    return last(l.head)
                  ^