recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  if (l==Nil){return Nil}
  else if (length(l)==1){
    return last(l.head)
  }
  else{
    last(l.tail)
  }
}

def length(l:List[Int]): Int = {
  if (l==Nil){ return 0}
  else length(l.tail)+1
}